--- a/web/jsp/style.css
+++ b/web/jsp/style.css
@@ -1,19 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Rufina:wght@400;700&display=swap%27');
 :root {
     --white: rgba(255, 255, 255);
     --dark_gray: #3D3D3D;
     --grey: #495057;
     --black: rgba(0, 0, 0);
     --light_gray: #F3F4F1;
-}
-
-@font-face {
-    font-family: Rufina;
-    src: url(https://fonts.google.com/specimen/Rufina);
-}
-
-@font-face {
-    font-family: Open Sans;
-    src: url(https://fonts.google.com/specimen/Open+Sans);
 }
 
 button:focus {
