Fixed hover animation and Peso sign issue
Fixed hover animation and Peso sign issue

--- a/web/jsp/style.css
+++ b/web/jsp/style.css
@@ -132,18 +132,15 @@ ul.nav a:hover {
 .overlay {
     position: absolute;
     top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 75%;
+    height: inherit;
+    width: inherit;
     opacity: 0;
     transition: .5s ease;
-    background-color: #008CBA;
+    background-color: var(--black);
 }
 
 .product-img-container:hover .overlay {
-    opacity: 1;
+    opacity: 40%;
 }
 
 #Quote_Break {
