--- a/web/jsp/style.css
+++ b/web/jsp/style.css
@@ -5,6 +5,7 @@
     --grey: #495057;
     --black: rgba(0, 0, 0);
     --light_gray: #F3F4F1;
+    --light_brown: #F7F6EE
 }
 
 button:focus {
@@ -12,6 +13,7 @@ button:focus {
 }
 
 #Header {
+    width: 100vw;
     background-color: var(--black);
     height: 55px;
 }
@@ -93,7 +95,7 @@ ul.nav a:hover {
     padding: 60px 100px 60px 100px;
 }
 
-#Product_container {
+.product-container {
     padding: 0px;
     margin: 0px 0px 70px 0px;
 }
@@ -112,6 +114,7 @@ ul.nav a:hover {
 }
 
 .bg-product {
+    border: none;
     background-color: var(--light_gray);
 }
 
@@ -129,6 +132,11 @@ ul.nav a:hover {
     padding: 20px 0px 20px 0px;
 }
 
+#Empty_Product_Container{
+    padding: 0px;
+    height: 0px;
+}
+
 .overlay {
     position: absolute;
     top: 0;
@@ -139,13 +147,125 @@ ul.nav a:hover {
     background-color: var(--black);
 }
 
+#Add_to_Cart {
+    margin: 0px;
+    position: absolute;
+    bottom: 0;
+    width: inherit;
+    font-family: Open Sans;
+    font-size: 18px;
+    padding: 5px 0px 5px 0px;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: var(--black);
+    color: var(--white);
+}
+
 .product-img-container:hover .overlay {
     opacity: 40%;
 }
 
+.product-img-container:hover #Add_to_Cart {
+    opacity: 100%;
+}
+
 #Quote_Break {
-    height: 40vh;
+    padding: 0px;
+    height: 360px;
     background-color: var(--dark_gray);
+}
+
+#Quote{
+    height: min-content;
+    font-family: Rufina;
+    font-size: 35px;
+    color: var(--white);
+    margin: 0px 300px 0px 300px;
+}
+
+#Review_Title{
+    height: min-content;
+    position: sticky;
+    margin-left: 100px;
+    margin-top: 75px;
+    margin-bottom: 75px;
+    top: 125px;
+    text-align: left;
+    font-family: Rufina;
+    font-size: 70px;
+    color: var(--black);
+
+}
+
+#Review_Right_Side{
+    padding: 0px 100px 0px 100px;
+    margin: 100px 0px 100px 0px;
+    border-left: 3px solid var(--grey);
+}
+
+#Review_Container{
+    font-family: Open Sans;
+    padding: 50px 0px 50px 0px;
+    border-top: 1px solid var(--grey);
+}
+
+#Review_Container h1{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#Review_Container h2{
+    font-size: 10px;
+    color: var(--grey)
+}
+
+#Review_Container p{
+    font-size: 15px;
+}
+
+#Footer{
+    font-family: Open Sans;
+    background-color: var(--light_brown);
+    padding: 50px 100px 50px 100px
+}
+
+#Footer .col{
+    margin: 0px;
+    padding: 0px
+}
+
+#Footer ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+
+#Footer img{
+    width: 35px;
+    margin: 15px 0px 0px 0px;
+}
+
+#Footer h1{
+    font-size: 18px;
+    font-weight: bold;
+}
+
+#Footer a,h2,p{
+    color: var(--black);
+    font-size: 13px;
+}
+
+#Footer a:hover{
+    text-decoration: none;
+}
+
+#Footer input{
+    border: none;
+    background-color: var(--light_brown);
+    border-bottom: 1px solid var(--grey);
+    font-family: Open Sans;
+    font-size: 13px;
 }
 
 .modal-dialog,
