--- a/web/jsp/style.css
+++ b/web/jsp/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Rufina:wght@400;700&display=swap%27');
+
 :root {
     --white: rgba(255, 255, 255);
     --dark_gray: #3D3D3D;
@@ -347,4 +348,7 @@ ul.nav a:hover {
 #Login_Signup {
     color: var(--black);
     font-size: 12px;
+}
+.tite{
+    font-size: 120px;  
 }
