--- a/web/jsp/payment.css
+++ b/web/jsp/payment.css
@@ -8,6 +8,8 @@ body{
     margin-top: 6.4rem;
     align-items: center;
     justify-content: center;
+    
+        
 
 }
 .ThankYou{
@@ -15,6 +17,8 @@ body{
     font-size: 6.25rem;
     font-family: Rufina; 
     text-align: center;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .OrderPlaced{
     margin-top: 2rem;
@@ -22,12 +26,16 @@ body{
     font-family: Open Sans; 
     font-size: 	2.5rem;
     text-align: center
+        padding-left: 20px;
+    padding-right: 20px;
 
 }
 .OtherTextThankYou{
     font-family: Open Sans; 
     font-size: 1.25rem;
     text-align: center
+        padding-left: 20px;
+    padding-right: 20px;
 
 }
 .DownloadPDFText{
@@ -35,6 +43,8 @@ body{
     font-size: 1.25rem;
     text-align: center;
     margin-top: 2.5rem;
+    padding-left: 20px;
+    padding-right: 20px;
         
 }
 .VisitAccText{
@@ -42,6 +52,8 @@ body{
     font-size: 1.25rem;
     text-align: center;
     margin-top: 2.5rem;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 #profile{
 width: 95px;
