Responsive Landing Page and Final Profile Page
Finished responsiveness of Landing Page and added the final Profile Page

--- a/web/jsp/style.css
+++ b/web/jsp/style.css
@@ -8,6 +8,10 @@
     --light_brown: #F7F6EE
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 button:focus {
     outline: none;
 }
@@ -39,27 +43,39 @@ ul.nav a:hover {
     height: 30px;
 }
 
+#Header_Left{
+    position: absolute;
+    left: 0px;
+    margin-left: 10px
+}
+
+#Header_Right{
+    position: absolute;
+    right: 0px;
+    margin-right: 10px
+}
+
 #Quote_Background {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
+    position: absolute;
+    z-index: -1;
 }
 
 #Product_Sample {
-    position: absolute;
-    left: 15vw;
-    height: 60vh;
-    top: 20vh;
+    width: 190px;
+    margin-top: 100px;
 }
 
 #Title {
+    margin: 0px;
     padding: 0px;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
 #Title_Page {
-    top: 40vh;
-    left: 50%
+    padding: 0px;
 }
 
 #Title_Header {
@@ -180,7 +196,7 @@ ul.nav a:hover {
     font-family: Rufina;
     font-size: 35px;
     color: var(--white);
-    margin: 0px 300px 0px 300px;
+    margin: 0px 20% 0px 20%;
 }
 
 #Review_Title{
@@ -189,7 +205,7 @@ ul.nav a:hover {
     margin-left: 100px;
     margin-top: 75px;
     margin-bottom: 75px;
-    top: 125px;
+    top: 75px;
     text-align: left;
     font-family: Rufina;
     font-size: 70px;
@@ -231,7 +247,7 @@ ul.nav a:hover {
 
 #Footer .col{
     margin: 0px;
-    padding: 0px
+    padding: 0px 10px 0px 10px;
 }
 
 #Footer ul{
@@ -251,7 +267,15 @@ ul.nav a:hover {
     font-weight: bold;
 }
 
-#Footer a,h2,p{
+#Footer a{
+    color: var(--black);
+    font-size: 13px;
+}
+#Footer h2{
+    color: var(--black);
+    font-size: 13px;
+}
+#Footer p{
     color: var(--black);
     font-size: 13px;
 }
@@ -261,6 +285,71 @@ ul.nav a:hover {
 }
 
 #Footer input{
+    border: none;
+    background-color: var(--light_brown);
+    border-bottom: 1px solid var(--grey);
+    font-family: Open Sans;
+    font-size: 13px;
+}
+
+#Footer_Small{
+    display: none;
+    font-family: Open Sans;
+    background-color: var(--light_brown);
+    padding: 10px 0px 10px 0px;
+}
+
+#Footer_Small>*{
+    text-align: center;
+    justify-content: center;
+    margin: 15px 0px 15px 0px;
+}
+
+#Footer_Small button{
+    border: none;
+    background-color: var(--light_brown);
+}
+
+#Footer_Small .col{
+    margin: 0px;
+    padding: 0px 10px 0px 10px;
+}
+
+#Footer_Small ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+
+#Footer_Small img{
+    width: 35px;
+    margin: 0px;
+}
+
+#Footer_Small h1{
+    font-size: 18px;
+    font-weight: bold;
+}
+
+#Footer_Small a{
+    color: var(--black);
+    font-size: 13px;
+}
+#Footer_Small h2{
+    color: var(--black);
+    font-size: 13px;
+}
+#Footer_Small p{
+    color: var(--black);
+    font-size: 13px;
+}
+
+#Footer_Small a:hover{
+    text-decoration: none;
+}
+
+#Footer_Small input{
     border: none;
     background-color: var(--light_brown);
     border-bottom: 1px solid var(--grey);
@@ -278,13 +367,6 @@ ul.nav a:hover {
     -ms-transform: translate3d(0%, 0, 0);
     -o-transform: translate3d(0%, 0, 0);
     transform: translate3d(0%, 0, 0);
-}
-
-@media screen and (max-width: 1000px) {
-    .modal-dialog,
-    .modal.right .modal-dialog {
-        width: 75vw;
-    }
 }
 
 .modal-content,
@@ -347,4 +429,234 @@ ul.nav a:hover {
 #Login_Signup {
     color: var(--black);
     font-size: 12px;
+}
+
+@media screen and (max-width: 640px) {
+
+    .nav-link {
+        font-size: 10px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    #Luvamine-Logo-White {
+        height: 15px;
+    }
+
+    #Product_Sample {
+        height: 60vh;
+        width: auto;
+    }
+
+    #Title_Page {
+        margin: 0px;
+        padding: 0px;
+        text-align: center;
+    }
+
+    #Title_Header {
+        font-size: 40px;
+    }
+
+    #Shop_Now_Button {
+        margin-top: 10px;
+        font-family: Open Sans;
+        font-size: 15px;
+        background-color: var(--black);
+    }
+
+    #Quote{
+        font-size: 30px;
+        margin: 0px 10% 0px 10%;
+    }
+
+    #Review_Title{
+        font-size: 50px;
+        margin: 0px;
+        padding: 0px;
+        text-align: center;
+    }
+
+    .nav-link {
+        font-size: 10px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    #Luvamine-Logo-White {
+        height: 15px;
+    }
+
+}
+
+@media screen and (max-width: 992px) {
+    #Product_Sample {
+        height: 55vh;
+        width: auto;
+    }
+
+    #Title_Page {
+        margin-top: 35px;
+        padding: 0px;
+        text-align: center;
+    }
+
+    #Title_Header {
+        font-size: 30px;
+    }
+
+    #Shop_Now_Button {
+        margin-top: 10px;
+        font-family: Open Sans;
+        font-size: 15px;
+        background-color: var(--black);
+    }
+
+    #Review_Title{
+        position: relative;
+        margin: 0px 0px 50px 0px;
+        padding: 0px;
+        text-align: center;
+    }
+
+    #Review_Right_Side{
+        border: none;
+        margin: 50px 0px 0px 0px;
+        padding: 0px 10% 0px 10%;
+    }
+
+
+    #Footer{
+        display: none;
+    }
+
+    #Footer_Small{
+        display: flex;
+        flex-direction: column;
+        font-family: Open Sans;
+        background-color: var(--light_brown);
+        padding: 10px 0px 10px 0px;
+    }
+
+    #Footer_Small input{
+        width: 50%;
+        margin: auto;
+    }
+
+}
+
+@media screen and (max-width: 1310px) {
+    #Product_col {
+        padding: 60px 60px 60px 0px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+
+    #Product_Title {
+        margin: 50px 0px 50px 0px;
+        text-align: center;
+        font-size: 20px;
+    }
+
+    #Product_col{
+        padding: 0px;
+    }
+}
+
+#Profile_Body{
+    font-family: Open Sans;
+    padding: 50px 75px 50px 75px;
+    width: 100%;
+    margin: 0px;
+}
+
+#Payment_Details h1{
+    font-size: 25px;
+    font-weight: bold;
+}
+#Payment_Details h2{
+    margin: 40px 0px 20px 0px;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+#Profile_Header{
+    margin: 55px 0px 0px 0px;
+    padding: 50px 75px 50px 75px;
+    width: 100%;
+    background-color: var(--light_brown);
+}
+
+#Profile_Name_Role h1{
+    font-family: Rufina;
+    font-size: 35px;
+}
+
+#Profile_Name_Role h2{
+    font-family: Open Sans;
+    font-size: 20px;
+}
+
+#PDF_Download_Container{
+    border-left: 3px solid var(--grey);
+}
+
+.pdf-download{
+    padding: 20px 0px 20px 40px;
+}
+
+#PDF_Download_Container h1{
+    font-size: 30px;
+}
+
+#PDF_Download_Container button{
+    font-size: 16px;
+    margin: 10px 0px 0px 5px;
+}
+
+@media screen and (max-width: 767px) {
+
+    #PDF_Download_Container{
+        border-top: 3px solid var(--grey);
+        border-left: none;
+        text-align: center;
+        padding: 25px 0px 15px 0px;
+        margin: 15px 0px 15px 0px;
+    }
+
+    #PDF_Download_Container button{
+        margin: 0px;
+    }
+
+    #PDF_Download_Container h1{
+        text-align: left;
+        font-size: 20px;
+    }
+
+    .pdf-download{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+
+    #Profile_Body{
+        padding: 20px;
+    }
+
+    #Profile_Header{
+        padding: 40px 20px 40px 20px;
+    }
+
+    #Profile_Name_Role{
+       text-align: center;
+    }
+    
+    #Profile_Header button{
+       margin-top: 20px;
+    }
 }
