--- a/web/style.css
+++ b/web/style.css
@@ -673,9 +673,51 @@ ul.nav a:hover {
     #Profile_Header button{
         margin-top: 40px 20px 20px 20px;
     }
-    
+
     .modal-dialog,
     .modal.right .modal-dialog {
         width: 75vw;
     }
+}
+
+.login,
+.image {
+    min-height: 100vh;
+}
+
+
+.bg-image-error {
+    background-image: url('https://media.wired.com/photos/5f87340d114b38fa1f8339f9/master/w_1600%2Cc_limit/Ideas_Surprised_Pikachu_HD.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+.login-heading {
+    font-weight: 300;
+}
+
+.btn-login {
+    font-size: 0.9rem;
+    letter-spacing: 0.05rem;
+    padding: 0.75rem 1rem;
+    border-radius: 2rem;
+}
+
+
+.padding {
+    padding: 3rem !important
+}
+
+h6 {
+    font-size: 14px
+}
+
+@media only screen and (min-width: 1400px) {
+    p {
+        font-size: 14px
+    }
+}
+
+.text-muted {
+    color: #919aa3 !important
 }
