Final Code, missing checkout servlet
Save Payment Details at Checkout
Logic of Stock Reduction at Checkout

--- a/web/style.css
+++ b/web/style.css
@@ -788,3 +788,34 @@ h6 {
     background-color: var(--black);
     border: none;
 }
+
+#Error_Message_Container{
+    margin: 55px 0px 0px 0px;
+    font-family: Open Sans;
+}
+
+#Error_Message_Container h1{
+    font-family: Rufina;
+    font-size: 100px;
+    font-weight: bold;
+    margin: 25vh 0px 100px 0px;
+}
+
+#Error_Message_Container h2{
+    font-size: 40px;
+    margin-bottom: 25px;
+}
+
+#Error_Message_Container h3{
+    font-size: 20px;
+    margin-bottom: 25px;
+}
+
+#Error_Message_Container a{
+    font-size: 15px;
+    color: var(--black);
+}
+
+#Error_Message_Container a:hover{
+    text-decoration: none;
+}
